# Kotoba

./: AGENTS.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: klp-standards-track.md
docs/: 仕様差分_v0.4_to_v1.md  実装設計_v1.md  言語仕様.md  言語仕様_v1.md  適合テスト台帳_v1.md
docs/KLP/: KLP-001_設計思想.md  KLP-100_仮に.md  KLP-101_組と特性の意味論.md  KLP-102_型注釈構文.md  KLP-103_条件式の型制約.md  KLP-104_列挙型.md  KLP-105_ジェネリクスと特性境界.md  KLP-106_エラー値の流儀.md  KLP-110_内包表記.md  KLP-111_スライスと範囲操作.md  KLP-112_資源管理構文.md  KLP-113_表明する.md  KLP-114_デフォルト引数と可変長引数.md  KLP-115_ジェネレータ.md  KLP-120_モジュール探索規則.md  KLP-121_パッケージ管理.md  KLP-122_REPL_デバッガ_フォーマッタ.md  KLP-123_非同期実行.md  KLP-300_レジスタ型VM実装.md  KLP-301_LLVMバックエンド移行.md
docs/テスト/: 適合テスト台帳_v1.md
docs/仕様/: 00_概要と用語.md  01_字句.md  02_構文.md  03_名前束縛とスコープ.md  04_呼び出しとて形.md  05_型.md  06_制御構造.md  07_例外処理.md  08_モジュール.md  09_実行モデル.md  10_診断.md  11_適合性.md
docs/実装/: 設計メモ_v1.md
docs/差分/: v0.4_to_v1.md
examples/: advanced_bigint_and_units.kb  advanced_data.kb  advanced_loops.kb  advanced_modules_main.kb  advanced_recursion.kb  advanced_try_catch.kb  hello.kb
examples/lib/: math_utils.kb  text_utils.kb
src/: bytecode.rs  compiler.rs  lexer.rs  lib.rs  main.rs  parser.rs  source.rs  token.rs  vm.rs
src/backend/: builtins.rs  codegen.rs  mod.rs  rir.rs  value.rs  vm.rs
src/common/: source.rs  span.rs
src/diag/: report.rs
src/frontend/: ast.rs  grammar.rs  lexer.rs  parser.rs  token.rs
src/module/: loader.rs  resolver.rs
src/sema/: hir.rs  infer.rs  mod.rs  particles.rs  symbols.rs  types.rs
tests/: conformance.rs  e2e.rs  unit.rs
tmp/: PLAN.md
(+20 files in other folders)
