[package]
name = "kotoba"
version = "0.2.0"
edition = "2024"

[dependencies]
ariadne = "0.5"
chumsky = "0.10"
clap = { version = "4.5", features = ["derive"] }
indexmap = "2"
logos = "0.14"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"
