[package]
name = "kotoba"
version = "0.2.0"
edition = "2024"

[dependencies]
chumsky = "0.12"
clap = { version = "4.5", features = ["derive"] }
indexmap = "2"
logos = "0.16"
miette = { version = "7.6.0", features = ["fancy"] }
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
petgraph = "0.8.3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
unicode-normalization = "0.1.25"

[dev-dependencies]
insta = "1.46.3"
pretty_assertions = "1"
proptest = "1.10.0"
